# goit-py_web-hw-09

./: beautifulsoup.py  models.py  pyproject.toml  scraper_selenium.py  search.py  seed.py
