[tool.poetry]
name = "goit-py-web-hw-09"
version = "0.1.0"
description = ""
authors = ["Serge-Moskalenko <skmos2019@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.29.1"
pymongo = "^4.11"
redis = "^5.2.1"
pika = "^1.3.2"
redis-lru = "^0.1.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.0"
selenium = "^4.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
